--- a/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_navbar.scss
+++ b/src/SumoCoders/FrameworkCoreBundle/Resources/assets/sass/components/_navbar.scss
@@ -175,10 +175,11 @@
     box-shadow: 0 2px 2px rgba(0, 0, 0, .2);
     height: 100%;
     left: 0;
-    overflow-y: scroll;
+    overflow-x: auto;
     position: fixed;
     width: 235px;
     z-index: 999999;
+    -ms-overflow-style: none;
 
     .navbar-header {
       float: left;
